@@ -106,9 +106,6 @@ public class MipsGenModule {
                     }
                     translate(ir);
                 }
-                if (Config.RegAllocator) {
-                    clearRegMap();
-                }
             }
         }
         IOUtils.mips("\nreturn:\n");
@@ -512,8 +509,6 @@ public class MipsGenModule {
     private void parseConv(ConvInst convInst) {
         if (convInst.getOperator() == Operator.Zext) {
             load("$t0", convInst.getOperand(0).getUniqueName());
-            IOUtils.mips("sll $t0, $t0, 16\n");
-            IOUtils.mips("srl $t0, $t0, 16\n");
             store("$t0", convInst.getUniqueName());
         } else if (convInst.getOperator() == Operator.Bitcast) {
             load("$t0", convInst.getOperand(0).getUniqueName());
@@ -530,16 +525,7 @@ public class MipsGenModule {
                 IOUtils.mips("lw " + reg + ", 0(" + reg + ")\n");
             }
         } else {
-            if (Config.RegAllocator) {
-                String name1 = Reg.getInstance().loadFromRegMap(name);
-                if (name1 == null) {
-                    IOUtils.mips("lw " + reg + ", " + mem.get(name).getSecond() + "(" + mem.get(name).getFirst() + ")\n");
-                } else {
-                    IOUtils.mips("move " + reg + ", " + name1 + "\n");
-                }
-            } else {
-                IOUtils.mips("lw " + reg + ", " + mem.get(name).getSecond() + "(" + mem.get(name).getFirst() + ")\n");
-            }
+            IOUtils.mips("lw " + reg + ", " + mem.get(name).getSecond() + "(" + mem.get(name).getFirst() + ")\n");
         }
     }
 
@@ -554,20 +540,7 @@ public class MipsGenModule {
                 IOUtils.mips("sw " + reg + ", 0($t1)\n");
             }
         } else {
-            if (Config.RegAllocator) {
-                List<String> list = Reg.getInstance().storeToRegMap(name);
-                if (list.size() == 1) {
-                    String i = list.get(0);
-                    IOUtils.mips("move " + i + ", " + reg + "\n");
-                } else if (list.size() == 2) {
-                    String i = list.get(0);
-                    String name1 = list.get(1);
-                    IOUtils.mips("sw " + i + ", " + mem.get(name1).getSecond() + "(" + mem.get(name1).getFirst() + ")\n");
-                    IOUtils.mips("move " + i + ", " + reg + "\n");
-                }
-            } else {
-                IOUtils.mips("sw " + reg + ", " + mem.get(name).getSecond() + "(" + mem.get(name).getFirst() + ")\n");
-            }
+            IOUtils.mips("sw " + reg + ", " + mem.get(name).getSecond() + "(" + mem.get(name).getFirst() + ")\n");
         }
     }
 
@@ -579,12 +552,4 @@ public class MipsGenModule {
         return str.matches("-?[0-9]+");
     }
 
-    private void clearRegMap() {
-        Map<String, Integer> map = Reg.getInstance().getRegMap();
-        for (String s : map.keySet()) {
-            int i = map.get(s);
-            IOUtils.mips("sw " + Reg.getInstance().getReg(i) + ", " + mem.get(s).getSecond() + "(" + mem.get(s).getFirst() + ")\n");
-        }
-        Reg.getInstance().clear();
-    }
 }
